Bug 605928 - Repaint issue after detaching/reattaching a tab that contains Flash video.  r=roc a=blocking2.0:betaN